set up models and more routing

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,6 +7,40 @@
 
     <title>Onus | The Things We Own, Own Us</title>
 
-    <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
+    <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.css">
+    <link rel="stylesheet" type="text/css" href="onus.css">
 </head>
 <body>
+    <div class="ui sidebar inverted vertical menu">
+        <div class="item">
+            <h1 class="header menu-header"><span>< O ></span> Onus</h1>
+            <div class="menu">
+                <a class="item active"><i class="home icon"></i>Home</a>
+                <a class="item"><i class="address card icon"></i> Log In</a>
+            </div>
+        </div>
+        <div class="item">
+            <h1 class="header">Home</h1>
+            <div class="menu">
+                <a class="item">Kitchen</a>
+                <a class="item">Living Room</a>
+                <a class="item">Dining Room</a>
+                <a class="item">Bedroom</a>
+                <a class="item">Bathroom</a>
+            </div>
+        </div>
+        <div class="item">
+            <h1 class="header">Work</h1>
+            <div class="menu">
+                <a class="item">Office</a>
+                <a class="item">Romney</a>
+                <a class="item">Storage</a>
+                <a class="item">Locker Room</a>
+            </div>
+        </div>
+    </div>
+    <div class="pusher">
+        <div class="ui black launch right attached button">
+            <i class="sidebar icon"></i>
+            <span>Menu</span>
+        </div>
