--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,18 +1,32 @@
 <% include partials/header %>
+<div id="banner" class="ui inverted vertical masthead center aligned segment">
+  <div class="ui text container">
+    <h1 class="ui inverted huge header">ONUS</h1>
+    <div class="ui divider"></div>
+    <h3>The things we own should not own us</h3>
+    <br />
+    <div id="startButton" class="ui button large primary">Get Started!</div>
+  </div>
+</div>
 
-<div class="ui sidebar inverted vertical menu">
-    <a class="item">
-      1
-    </a>
-    <a class="item">
-      2
-    </a>
-    <a class="item">
-      3
-    </a>
+<div class="ui modal">
+  <i class="close icon"></i>
+  <div class="header">Log-in</div>
+  <div class="ui two column stackable center aligned grid">
+    <div class="ui vertical divider">Or</div>
+    <div class="column">
+      <div class="header">Log-in</div>
+    </div>
+    <div class="column">
+      <div class="header">Join</div>
+    </div>
   </div>
-  <div class="pusher">
-    <!-- Site content !-->
+  <div class="actions">
+    <div class="ui black deny button">Nope</div>
+    <div class="ui positive right labeled icon button">
+      Yep, that's me <i class="checkmark icon"></i>
+    </div>
   </div>
+</div>
 
 <% include partials/footer %>
