updated file structure and routing

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <% include partials/header %>
 <div id="banner" class="ui inverted vertical masthead center aligned segment">
   <div class="ui text container">
-    <h1 class="ui inverted huge header">ONUS</h1>
+    <h1 class="ui center aligned inverted icon header"><i class="circular archive icon"></i> ONUS</h1>
     <div class="ui divider"></div>
     <h3>The things we own should not own us</h3>
     <br />
@@ -10,21 +10,51 @@
 </div>
 
 <div class="ui modal">
-  <i class="close icon"></i>
-  <div class="header">Log-in</div>
-  <div class="ui two column stackable center aligned grid">
-    <div class="ui vertical divider">Or</div>
-    <div class="column">
-      <div class="header">Log-in</div>
-    </div>
-    <div class="column">
-      <div class="header">Join</div>
+    <i class="close icon"></i>
+  <div class="ui top attached segment">
+    <div class="ui huge header">Welcome!</div>
+  </div>
+  <div class="ui attached segment">
+    <div class="ui two column stackable center aligned grid">
+      <div class="ui vertical divider">Or</div>
+      <div class="column">
+        <div class="ui header">Login</div>
+          <form name="login_form" class='ui form' action="">
+            <div class="field">
+              <label for="username">Username</label>
+              <input type="text" name='username' placeholder="Username">
+            </div>
+            <div class="field">
+              <label for="password">Password</label>
+              <input type="password" name='password' placeholder="Password">
+            </div>
+          </form>
+      </div>
+      <div class="column">
+        <div class="ui header">Join</div>
+        <form name="join_form" class='ui form' action="">
+            <div class="field">
+              <label for="username">Username</label>
+              <input type="text" name='username' placeholder="Username">
+            </div>
+            <div class="field">
+              <label for="password">Password</label>
+              <input type="text" name='password' placeholder="Password">
+            </div>
+            <div class="field">
+              <label for="password">Confirm Password</label>
+              <input type="password" name='password' placeholder="Password">
+            </div>
+          </form>
+      </div>
     </div>
   </div>
-  <div class="actions">
-    <div class="ui black deny button">Nope</div>
-    <div class="ui positive right labeled icon button">
-      Yep, that's me <i class="checkmark icon"></i>
+  <div class="ui bottom attached segment">
+    <div class="actions">
+      <div class="ui black deny button">Nope</div>
+      <div class="ui positive right labeled icon button">
+        Yep, that's me <i class="checkmark icon"></i>
+      </div>
     </div>
   </div>
 </div>
