--- a/public/onus.css
+++ b/public/onus.css
@@ -8,7 +8,7 @@
 }
 
 .masthead.segment {
-  min-height: 700px;
+  height: 100vh;
   padding: 1em 0em;
 }
 .masthead .logo.item img {
@@ -97,4 +97,32 @@
   position: fixed;
   top: 0;
   width: 100%;
+}
+
+.text.container{
+  margin-top: 10vh;
+}
+
+.ui.modal .ui.top.attached.segment{
+  margin-top: 0;
+}
+
+h1.ui.inverted.header{
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+}
+
+.ui.icon.header .circular.icon {
+  font-size: 1.2em;
+}
+
+i.circular.icon{
+  box-shadow: 0em 0em 0em 0.1em rgba(255, 255, 255, 0.2) inset;
+}
+
+.ui.form{
+  width: 80% !important;
+  margin: auto;
+  text-align: left;
 }
