set up some routing and a show page. need to figure out seeds

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,8 +7,8 @@
 
     <title>Onus | The Things We Own, Own Us</title>
 
-    <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.css">
-    <link rel="stylesheet" type="text/css" href="onus.css">
+    <link rel="stylesheet" type="text/css" href="/semantic/dist/semantic.css">
+    <link rel="stylesheet" type="text/css" href="/onus.css">
 </head>
 <body>
     <div class="ui sidebar inverted vertical menu">
