--- a/views/main/home.ejs
+++ b/views/main/home.ejs
@@ -1,9 +1,9 @@
-<% include partials/header %>
+<% include ../partials/header %>
 <div id="banner" class="ui inverted vertical masthead center aligned segment">
   <div class="ui text container">
     <h1 class="ui center aligned inverted icon header"><i class="circular archive icon"></i> ONUS</h1>
     <div class="ui divider"></div>
-    <h3>The things we own should not own us</h3>
+    <h3><a href="/onus/<%= user._id %>">The things we own should not own us</a></h3>
     <br />
     <div id="startButton" class="ui button large primary">Get Started!</div>
   </div>
@@ -59,4 +59,4 @@
   </div>
 </div>
 
-<% include partials/footer %>
+<% include ../partials/footer %>
