--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,7 +4,7 @@
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
         crossorigin="anonymous">
     </script>
-    <script src="semantic/dist/semantic.min.js"></script>
+    <script src="/semantic/dist/semantic.min.js"></script>
     <script src="/onus.js"></script>
 </body>
 </html>
