basic routing with new create and show routes complete

--- a/public/onus.css
+++ b/public/onus.css
@@ -130,3 +130,7 @@ i.circular.icon{
 #itemsSegment{
   margin-bottom: 1rem;
 }
+
+.ui.accordion .title .dropdown.icon, .ui.accordion .accordion .title .dropdown.icon{
+  float: right;
+}
