--- a/views/landing/landing.ejs
+++ b/views/landing/landing.ejs
@@ -46,6 +46,12 @@
               <label for="password">Password</label>
               <input type="password" name='password' placeholder="Password">
             </div>
+            <div class="field">
+              <div class="ui checkbox">
+                <input type="checkbox" tabindex="0" class="hidden">
+                <label>I agree to the Terms and Conditions</label>
+              </div>
+            </div>
             <button class="ui button" type="submit">Join</button>
           </form>
       </div>
