--- a/views/landing/landing.ejs
+++ b/views/landing/landing.ejs
@@ -19,7 +19,7 @@
       <div class="ui vertical divider">Or</div>
       <div class="column">
         <div class="ui header">Login</div>
-          <form name="login_form" class='ui form' action="/login" method="POST">
+          <form name="login_form" class='ui form' action="/onus/login" method="POST">
             <div class="field">
               <label for="username">Username</label>
               <input type="text" name='username' placeholder="Username">
@@ -33,7 +33,7 @@
       </div>
       <div class="column">
         <div class="ui header">Join</div>
-        <form name="join_form" class='ui form'  action="/register" method="POST">
+        <form name="join_form" class='ui form'  action="/onus/register" method="POST">
             <div class="field">
               <label for="name">Name</label>
               <input type="text" name='name' placeholder="Name">
