--- a/views/item/new.ejs
+++ b/views/item/new.ejs
@@ -32,35 +32,35 @@
                 </select>
             </div>
             <div class="inline fields">
-                <label for="item[priority]">Priority:</label><br><br>
+                <label for="item[stars]">Priority:</label>
                 <div class="field">
                     <div class="ui radio checkbox">
                         <label>5</label>
-                        <input type="radio" name="item[priority]" value="5">
+                        <input type="radio" name="item[stars]" value="5">
                     </div>
                 </div>
                 <div class="field">
                     <div class="ui radio checkbox">
                         <label>4</label>
-                        <input type="radio" name="item[priority]" value="4">
+                        <input type="radio" name="item[stars]" value="4">
                     </div>
                 </div>
                 <div class="field">
                     <div class="ui radio checkbox">
                         <label>3</label>
-                        <input type="radio" name="item[priority]" value="3">
+                        <input type="radio" name="item[stars]" value="3">
                     </div>
                 </div>
                 <div class="field">
                     <div class="ui radio checkbox">
                         <label>2</label>
-                        <input type="radio" name="item[priority]" value="2">
+                        <input type="radio" name="item[stars]" value="2">
                     </div>
                 </div>
                 <div class="field">
                     <div class="ui radio checkbox">
                         <label>1</label>
-                        <input type="radio" name="item[priority]" value="1">
+                        <input type="radio" name="item[stars]" value="1">
                     </div>
                 </div>
             </div>
