removed /onus from routes

--- a/views/collections/new.ejs
+++ b/views/collections/new.ejs
@@ -3,7 +3,7 @@
 <div class="ui container">
     <h1>this is the collection/new route</h1>
     <div class="ui segment">
-        <form class="ui form" action="/onus/<%= user._id %>/collections" method="POST">
+        <form class="ui form" action="/<%= user._id %>/collections" method="POST">
             <div class="form item">
                 <label for="name">Name your collection</label>
                 <input type="text" name="collection[name]" placeholder="Pairs of socks">
