--- a/views/item/edit.ejs
+++ b/views/item/edit.ejs
@@ -3,7 +3,7 @@
 <div class="ui container">
     <h1>this is the item/edit route</h1>
     <div class="ui segment">
-        <form class="ui form" action="/onus/<%= user._id %>/collections/<%= collection._id %>/items/<%= item._id %>?_method=PUT" method="POST">
+        <form class="ui form" action="/<%= user._id %>/collections/<%= collection._id %>/items/<%= item._id %>?_method=PUT" method="POST">
             <div class="field">
                 <label for="item[name]">Name:</label>
                 <input type="text" name="item[name]" value="<%= item.name %>">
