--- a/views/landing/login.ejs
+++ b/views/landing/login.ejs
@@ -3,7 +3,7 @@
 <div class="ui segment">
   <div class="ui huge header">Welcome!</div>
   <div class="ui header">Login</div>
-  <form name="login_form" class="ui form" action="/onus/login" method="POST">
+  <form name="login_form" class="ui form" action="/login" method="POST">
     <div class="field">
       <label for="username">Username</label>
       <input type="text" name="username" placeholder="Username" />
